# Plugin_skeleton

./: .gitignore  CLAUDE.md  CMakeLists.txt  juce8-critical-patterns.md  studio-identity.md
.claude/: CLAUDE.md  PLUGIN_SKELETON_MANUAL.md
.claude/agents/: dsp-agent.md  foundation-agent.md  validation-agent.md
.claude/agents/audio-fix-agent/: agent.md
.claude/agents/debug-agent/: agent.md
.claude/agents/dsp-architect/: agent.md
.claude/agents/dsp-engineer/: agent.md
.claude/agents/foundation-agent/: agent.md
.claude/agents/installer-agent/: agent.md
.claude/agents/knowledge-agent/: agent.md
.claude/agents/plugin-planner/: agent.md
.claude/agents/qa-audio-agent/: agent.md
.claude/agents/qa-tester/: agent.md
.claude/agents/refactor-agent/: agent.md
.claude/agents/release-notes-agent/: agent.md
.claude/agents/ui-designer-agent/: agent.md
.claude/agents/ui-engineer/: agent.md
.claude/skills/backup/: skill.md
.claude/skills/build-compile/: SKILL.md
.claude/skills/new-plugin/: SKILL.md
.claude/skills/new-version/: SKILL.md
.claude/skills/plugin-ideation/: SKILL.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/resume/: SKILL.md
.claude/skills/run-qa-audio/: skill.md
.claude/skills/status/: SKILL.md
.claude/skills/version-bump/: SKILL.md
.claude/skills/version-check/: skill.md
docs/Marketing/: ORIENT_PLUGINS_MARKETING_STRATEGY.docx  ORIENT_PLUGINS_MARKETING_STRATEGY.md
installer/: eula-template.md
plugins/SimpleGain/: CMakeLists.txt
plugins/SimpleGain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build.ps1
template/: ATMOKICK_CHECKLIST.md  CHECKLIST.md  CMakeLists.txt
template/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
troubleshooting/: index.md
